--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Morpion</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-
+    <div class="forTitle">
+        <h1 class="title">Morpion</h1>
+    </div>
+    <div class="forMenu">
+        <div class="menu">
+            <label for="firstname1" class="label1">Nom du 1er joueur :</label>
+            <input type="text" id="firstname1" maxlength="15" placeholder="Nom du joueur">
+            <label for="firstname2" class="label2">Nom du 2ème joueur :</label>
+            <input type="text" id="firstname2" maxlength="15" placeholder="Nom du joueur">
+            <button type="button" class="play">Jouer</button>
+        </div>
+    </div>
 </body>
+<script src="main.js"></script>
 </html>
