--- a/jeu.html
+++ b/jeu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jouez</title>
     <link href="jeu.css" rel="stylesheet" />
+    <link href="responsivejeu.css" rel="stylesheet" />
 </head>
 <body>
     <div class="header">
