--- a/index.html
+++ b/index.html
@@ -4,21 +4,14 @@
     <meta charset="UTF-8">
     <title>Morpion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="forTitle">
-        <h1 class="title">Morpion</h1>
-    </div>
-    <div class="forMenu">
-        <div class="menu">
-            <label for="firstname1" class="label1">Nom du 1er joueur :</label>
-            <input type="text" id="firstname1" maxlength="10" placeholder="Nom du joueur">
-            <label for="firstname2" class="label2">Nom du 2ème joueur :</label>
-            <input type="text" id="firstname2" maxlength="15" placeholder="Nom du joueur">
-            <button type="button" class="play">Jouer</button>
-        </div>
-    </div>
+<h1>Morpion</h1>
+<div class="chooseMode">
+    <button type="button" class="mode1">Local</button>
+    <button type="button" class="mode2">Ligne</button>
+</div>
 </body>
 <script src="main.js"></script>
 </html>
