pwa + before backend

--- a/jeuenligne.html
+++ b/jeuenligne.html
@@ -50,5 +50,5 @@
     </div>
 </div>
 </body>
-<script type="text/javascript" src="jeu.js"></script>
+<script type="text/javascript" src="jeuenligne.js"></script>
 </html>
